# CSI2372

./: .gitignore  README.md
assignment/1/: BigInteger.cpp  BigInteger.h  CMakeLists.txt  README.md  TestBigInteger.cpp
assignment/2/: CMakeLists.txt  DoubleLinkedList.cpp  DoubleLinkedList.h  Graph.cpp  Graph.h  TestGraph.cpp
assignment/3/: CMakeLists.txt  MappingRelation.cpp  MappingRelation.h  README.md  Relation.cpp  Relation.h  Relation_Template.cpp  Relation_Template.h  TestMappingRelation.cpp  TestRelation.cpp  TestRelation_Template.cpp
assignment/4/: CMakeLists.txt  Forest.cpp  Forest.h  Graph.cpp  Graph.h  README.md  TestForest.cpp  TestGraph.cpp  TestTree.cpp  Tree.cpp  Tree.h
final/: README.md  final-notes.md
final/q1/: Bishop.cpp  Bishop.h  CMakeLists.txt  King.cpp  King.h  Knight.cpp  Knight.h  Makefile  Piece.cpp  Piece.h  Piece.hpp  Queen.cpp  Queen.h  Rook.cpp  Rook.h  TestQ1.cpp  queen.cpp
final/q2/: CMakeLists.txt  Image.cpp  Image.h  Makefile  Monochrome.cpp  Monochrome.h  TestQ2.cpp
final/q3/: CMakeLists.txt  FuzzySet.cpp  FuzzySet.h  Makefile  TestQ3.cpp
lab/1/: CMakeLists.txt  Lab Task 1.pdf:Zone.Identifier  Set.h  TestSet.cpp  my_test.cpp  set.cpp  set.hpp
lab/10/: CMakeLists.txt  Poker.cpp  Poker.h  README.md  TestPoker.cpp  TestTexasHoldem.cpp  TexasHoldem.cpp  TexasHoldem.h
lab/2/: CMakeLists.txt  Relation.cpp  Relation.h
lab/2_bad/: CMakeLists.txt  MyTest.cpp  README.md  Relation.cpp  Relation.h  Set.cpp  Set.h  note.md
lab/3/: CMakeLists.txt  README.md  TestVector.cpp  Vector.cpp  Vector.h
lecture/: lecture_1.cpp
(+50 files in other folders)
