cmake_minimum_required(VERSION 3.16.3)

project("assignment4")

# file(GLOB SRCS *.cpp)

# add_definitions(-DENABLE_DEBUG)

add_executable(
    "TestGraph"
    "Graph.cpp"
    "TestGraph.cpp"
)

# add_executable(
#     "TestMappingRelation"
#     "MappingRelation.cpp"
#     "TestMappingRelation.cpp"
# )
